fixed argument name alignment

--- a/style.sass
+++ b/style.sass
@@ -46,6 +46,9 @@ section
     display: flex
     gap: 0.5rem
 
+    p
+        padding: 0.65rem
+
     // .command
     //     display: flex
     //     flex-wrap: wrap
